@@ -85,7 +85,7 @@ ergmm.MCMC.C<-function(model, start, prior, control, sample.size=NULL, interval=
   ## End Sanity checks.
 
   RESERVED<-2
-  
+
 #  cat("Entering C routine... ")
   Cret <- .C("ERGMM_MCMC_wrapper",
              # 1:
@@ -95,68 +95,68 @@ ergmm.MCMC.C<-function(model, start, prior, control, sample.size=NULL, interval=
              n=as.integer(n),
              p=as.integer(p),
              d=as.integer(d),
-             G=as.integer(G), 
-             # 7:
+             G=as.integer(NVL(G,0)),
+             latent=as.integer(NVL(model[["latentID"]],0)),
+             family=as.integer(NVL(model[["familyID"]],0)),
+             res=as.integer(with(model,c(sender,receiver,sociality))),
+             # 10:
              dir=as.integer(is.directed(model[["Yg"]])),
              viY=as.integer(Ym.noNA),
              vdY=as.double(Ym.noNA),
-             family=as.integer(model[["familyID"]]),
              iconsts=as.integer(model[["iconsts"]]),
              dconsts=as.double(model[["dconsts"]]),
-             latent=as.integer(model[["latentID"]]),
-             # 14:
-             vX=as.double(unlist(model[["X"]])),  
              # 15:
+             vX=as.double(unlist(model[["X"]])),  
+             # 16:
              lpY.mcmc=double(sample.size+RESERVED),
              lpZ.mcmc=if(!is.null(start[["Z"]])) double(sample.size+RESERVED) else double(0),
              lpbeta.mcmc=if(p>0) double(sample.size+RESERVED) else double(0),
              lpRE.mcmc=if(model[["sender"]] || model[["sociality"]] || model[["receiver"]]) double(sample.size+RESERVED) else double(0),
              lpLV.mcmc=if(!is.null(start[["Z"]])) double(sample.size+RESERVED) else double(0),
              lpREV.mcmc=if(model[["sender"]] || model[["sociality"]] || model[["receiver"]]) double(sample.size+RESERVED) else double(0),
-             # 21:
-             Z=as.double(start[["Z"]]),
              # 22:
+             Z=as.double(start[["Z"]]),
+             # 23:
              Z.pK=if(G > 0) as.double(start[["Z.pK"]]) else double(0),
              Z.mean=if(G > 0) as.double(start[["Z.mean"]]) else double(0),
              Z.var=as.double(start[["Z.var"]]),
              Z.K=if(G > 0) as.integer(start[["Z.K"]]) else integer(0),
-             # 26:
+             # 27:
              prior.Z.var=as.double(prior[["Z.var"]]),
              prior.Z.mean.var=if(G > 0) as.double(prior[["Z.mean.var"]]) else double(0),
              prior.Z.pK=if(G > 0) as.double(prior[["Z.pK"]]) else double(0),
              prior.Z.var.df=as.double(prior[["Z.var.df"]]),
-             # 30:
+             # 31:
              Z.mcmc = double((sample.size+RESERVED)*n*d),
              Z.rate = if(d > 0 || model[["sender"]] || model[["sociality"]] || model[["receiver"]]) double((sample.size+RESERVED)) else double(0),
-             # 32:
+             # 33:
              K.mcmc = if(G > 0) integer(n*(sample.size+RESERVED)) else integer(0),
              Z.pK.mcmc = double(G*(sample.size+RESERVED)),
              mu.mcmc = double(d*G*(sample.size+RESERVED)),
              Z.var.mcmc = double(max(G,d>0)*(sample.size+RESERVED)),
-             # 36:
+             # 37:
              start.beta=as.double(start[["beta"]]),
              prior.beta.mean=as.double(prior[["beta.mean"]]),
              prior.beta.var=as.double(prior[["beta.var"]]),
              beta.mcmc=double((sample.size+RESERVED)*p),
              beta.rate=double((sample.size+RESERVED)),
-             # 41:
+             # 42:
              start.sender=if(model[["sociality"]]) as.double(start[["sociality"]]) else as.double(start[["sender"]]),
              start.receiver=as.double(start[["receiver"]]),
              sender.var=if(model[["sociality"]]) as.double(start[["sociality.var"]]) else as.double(start[["sender.var"]]),
              receiver.var=as.double(start[["receiver.var"]]),
-             # 45:
+             # 46:
              prior.sender.var=if(model[["sociality"]]) as.double(prior[["sociality.var"]]) else as.double(prior[["sender.var"]]),
              prior.sender.var.df=if(model[["sociality"]]) as.double(prior[["sociality.var.df"]]) else as.double(prior[["sender.var.df"]]),
              prior.receiver.var=as.double(prior[["receiver.var"]]),
              prior.receiver.var.df=as.double(prior[["receiver.var.df"]]),
-             # 49:
+             # 50:
              sender.mcmc=if(model[["sender"]] || model[["sociality"]]) double(n*(sample.size+RESERVED)) else double(0),
              receiver.mcmc=if(model[["receiver"]]) double(n*(sample.size+RESERVED)) else double(0),
              sender.var.mcmc=if(model[["sender"]] || model[["sociality"]]) double((sample.size+RESERVED)) else double(0),
              receiver.var.mcmc=if(model[["receiver"]]) double((sample.size+RESERVED)) else double(0),
-             # 53:
-             lock.RE=as.integer(model[["sociality"]]),
-             observed=as.integer(observed),
+             # 54:
+             observed=as.integer(NVL(observed,-1)),
              # 55:
              deltas=with(control,as.numeric(c(Z.delta,RE.delta,group.deltas))),
              beta.eff.sender=as.double(c(model[["beta.eff.sender"]],model[["beta.eff.sociality"]])),
